solved some Alignment problem.

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1594,7 +1594,7 @@ li {
 
     img {
       left: 22px;
-      top: 16px;
+      top: 11px;
     }
   }
 }
